# pico-lang

./: .gitignore  Cargo.toml  LICENSE.md  README.md  compile.py
crates/sol/: Cargo.toml  package-lock.json  package.json
crates/sol-compiler/: Cargo.toml
crates/sol-compiler/src/: compiler.rs  lib.rs
crates/sol-js-builder/: Cargo.toml
crates/sol-js-builder/src/: builder.rs  expression.rs  function.rs  if_else.rs  lib.rs  var.rs  while.rs
crates/sol-parser/: Cargo.toml
crates/sol-parser/src/: expression.rs  lexer.rs  lib.rs  parser.rs  statement.rs  token.rs  type.rs
crates/sol-parser/src/passes/: mod.rs
crates/sol/js/: json.js  polyfill.js  web.js
crates/sol/src/: main.rs
examples/: array.sol  closures.sol  conditionals.sol  dots.sol  fib_fn.sol  fn.sol  hello_world.sol  let.sol  maps.sol  math.sol  short_closure.sol  type_checking.sol  while.sol
examples/libraries/math/: math.sol
examples/libraries/misc/: token.sol  uuid.sol
examples/libraries/os/: env.sol
examples/libraries/web/: http.sol  json.sol  website.sol
highlighting/: CHANGELOG.md  README.md  language-configuration.json  package.json  snippets.json
highlighting/syntaxes/: sol.tmLanguage.json
res/: elevate_windows.py
